--- a/app.json
+++ b/app.json
@@ -1,12 +1,9 @@
 {
   "name": "Start on Heroku: Go",
-  "description": "Go Getting Started Example App",
+  "description": "",
   "keywords": [
-    "getting-started",
     "go",
     "sample",
     "example"
-  ],
-  "website": "http://github.com/heroku/go-getting-started",
-  "repository": "http://github.com/heroku/go-getting-started"
+  ]
 }
